content/docs/0.11.x/reference/cli/commands/keptn_uninstall.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn uninstall"
slug: keptn_uninstall
---
## keptn uninstall

Uninstalls Keptn from a Kubernetes cluster

### Synopsis

Uninstalls Keptn from a Kubernetes cluster.

This command does *not* delete: 

* Dynatrace monitoring
* Prometheus monitoring
* Any (third-party) service installed in addition to Keptn (e.g., notification-service, slackbot-service, ...)

Besides, deployed services and the configuration on the Git upstream (i.e., GitHub, GitLab, or Bitbucket) are not deleted. To clean-up created projects and services, please see [Delete a project](https://v1.keptn.sh/docs/0.11.x/manage/project/#delete-a-project).

**Note:** This command requires a *Kubernetes current context* pointing to the cluster where Keptn should get uninstalled from.


```
keptn uninstall [flags]
```

### Examples

```
keptn uninstall
```

### Options

```
  -s, --insecure-skip-tls-verify   Skip tls verification for kubectl commands
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 25-Nov-2021
